# c-game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  miss-stats.csv  plot-stats.py
.cache/clangd/index/: aabb.c.696906C5E5CF104B.idx  aabb.h.EFA4DC5BE892510C.idx  addons.h.271564B725A1EF0E.idx  alerts.c.BEA763EAAF9CC1B3.idx  alerts.h.8BEC6E1984BBE661.idx  allocator.c.7AE02BB0C426CE46.idx  allocator.h.7212718E20A10496.idx  api.c.86295297D951DC0D.idx  api.c.D94CF9C19666F171.idx  api_defines.h.F2C2E55E311AAC61.idx  api_flags.h.5AB200ECAFFA8F9C.idx  api_internals.h.7A54914F713BABF5.idx  api_support.h.2F787BB378677B35.idx  api_types.h.52C4480B7780BA55.idx  app.c.2CF6F6B60509A7B6.idx  app.h.FA7FB601FF73B62D.idx  arena_allocator.c.AD5E0BDEC62D9184.idx  arena_allocator.h.54F67457B956664C.idx  array.c.BEB770E9FD80386C.idx  array.h.593DA03B4E9D8698.idx  ast.c.B7E99B6ABB72E81B.idx  ast.c.F84E6D4EE656FE67.idx  ast.h.21EA43A11DB087DB.idx  ast.h.B7B8D838714ABD92.idx  atomic.h.D9AAF0D0632FD1D8.idx  bake_config.h.0238B52A19BB6634.idx  base.h.59C91D7A83A15A3C.idx  bitset.c.6A6CC8F9B9E101B2.idx  bitset.c.8BF09B9C7D9C3F9E.idx  bitset.h.088D1C348CC79CCC.idx  bitset.h.84C8FC0C32938F90.idx  block_allocator.c.B39B35DDEA3E6938.idx  block_allocator.h.F7683EB2C85C15F6.idx  body.c.E53C16332DA1A4B2.idx  body.h.52B37ABAD72234DC.idx  bootstrap.c.08838969B3993BC4.idx  box2d.h.A3A12FD18FC600C3.idx  broad_phase.c.8EC02004E3F90461.idx  broad_phase.h.EA78A8C859C1C58F.idx  c_utils.c.583AC021E0FB8BD6.idx  (+316 more)
assets/: save.json  settings.ini
src/: main.c
src/components/: components.h  mycomponents.h
src/entities/: hero.c  hero.h
src/lib/: config.c  config.h  hashmap.c  hashmap.h  ini.c  ini.h  utils.c  utils.h
src/lib/gui/: gui_layout_jungle.c  gui_layout_jungle.h  jungle.h
src/modules/: module.c  module.h
src/systems/: onload.c  onload.h  onstore.c  onstore.h  onupdate.c  onupdate.h  preupdate.c
